--- a/karpenter_conf_files/nodePool.yaml
+++ b/karpenter_conf_files/nodePool.yaml
@@ -1,21 +1,3 @@
----
-apiVersion: karpenter.k8s.aws/v1
-kind: EC2NodeClass
-metadata:
-  name: default
-spec:
-  amiSelectorTerms:
-    - alias: bottlerocket@latest
-  role: ex-karpenter
-  subnetSelectorTerms:
-    - tags:
-        karpenter.sh/discovery: ex-karpenter
-  securityGroupSelectorTerms:
-    - tags:
-        karpenter.sh/discovery: ex-karpenter
-  tags:
-    karpenter.sh/discovery: ex-karpenter
----
 apiVersion: karpenter.sh/v1
 kind: NodePool
 metadata:
@@ -28,20 +10,23 @@ spec:
         kind: EC2NodeClass
         name: default
       requirements:
-        - key: "karpenter.k8s.aws/instance-architecture"
+        - key: "karpenter.sh/capacity-type"
           operator: In
-          values: ["x86_64", "arm64"]
+          values: ["on-demand"]
+        - key: "kubernetes.io/arch"
+          operator: In
+          values: ["arm64", "amd64"]
         - key: "karpenter.k8s.aws/instance-category"
           operator: In
           values: ["m"]
         - key: "karpenter.k8s.aws/instance-cpu"
           operator: In
-          values: ["2", "4"]
+          values: ["4","8"]
         - key: "karpenter.k8s.aws/instance-generation"
           operator: Gt
           values: ["4"]
   limits:
-    cpu: 10
+    cpu: 50
   disruption:
     consolidationPolicy: WhenEmpty
     consolidateAfter: 30s
